# Setouchi

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  PROGRAM_SPEC.md  README.md  browser_test.py  debug_segment.txt  debug_segment_full.txt  debug_segment_repr.txt  design.md  desktop_app.py  dis_block.py  dis_error.py  find_error_const.py  fix_excel_tools_analysis.py  inspect_original.py  ja-en-corpus-creator.py  move_any_translation.py  package-lock.json  package.json  prompt.md  pyproject.toml  requirement.txt  test.xlsx  test_ui.py  update_prompt.py  ~$test.xlsx
.codex/: config.toml
apps/shell/: Cargo.toml  tauri.conf.json
apps/shell/src/: main.rs
apps/shell/src/ui/: mod.rs
assets/: mock_excel_context.json
crates/copilot/: Cargo.toml
crates/copilot/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/excel/: Cargo.toml
crates/excel/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: ARCHITECTURE_RUST.md  SETUP_WINDOWS.md
excel_copilot/: config.py
excel_copilot/agent/: prompts.py  react_agent.py
excel_copilot/core/: browser_copilot_manager.py  excel_manager.py  exceptions.py
excel_copilot/tools/: actions.py  excel_tools.py  excel_tools_decompiled.py  schema_builder.py
excel_copilot/ui/: callbacks.py  chat.py  messages.py  theme.py  worker.py
pandas/: __init__.py
project/: _adjust_try_block.py  _cleanup_comments.py  _fix_characters_access.py  _fix_characters_access2.py  _manual_fix.py  _modify_colors.py  _remove_extra_paren.py  _rewrite_block.py  _simplify_try.py  _update_font_set.py  desktop_app.py  instrument_apply_colors.py  instrument_format_segment.py  instrument_tokenize.py  rewrite_apply_colors.py  rewrite_apply_colors2.py
project/excel_copilot/agent/: prompts.py
project/excel_copilot/core/: browser_copilot_manager.py  exceptions.py
project/excel_copilot/tools/: actions.py  excel_tools.py
project/excel_copilot/ui/: callbacks.py
project/tests/: color_highlight_test.py  test_diff_highlight.py  test_diff_highlight_integration.py
scripts/: build.ps1  copilot_bridge.py  dev.ps1  excel_bridge.py
setouchi/: __init__.py  fiscal.py  jpx_excel.py  qa.py  section.py
tests/: conftest.py  test_browser_prompt_fallback.py  test_fiscal.py  test_form_payload.py  test_jpx_excel.py  test_length_ratio_constraints.py  test_messages.py  test_qa.py  test_reference_pdf_validation.py  test_section.py  test_translation_with_references.py
tests/e2e/: test_desktop_app_e2e.py
