[workspace]
members = [
    "apps/shell",
    "crates/domain",
    "crates/excel",
    "crates/copilot",
    "crates/telemetry",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Setouchi Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
