[package]
name = "setouchi-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
leptos = { version = "0.6", features = ["csr"] }
tauri = { version = "2.0.0-rc.7", features = ["custom-protocol"] }
setouchi-domain = { path = "../../crates/domain" }
setouchi-excel = { path = "../../crates/excel" }
setouchi-copilot = { path = "../../crates/copilot" }
setouchi-telemetry = { path = "../../crates/telemetry" }
serde_json = { workspace = true }
