[package]
name = "setouchi-copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["time", "process", "io-util"] }
tracing = { workspace = true }
setouchi-domain = { path = "../domain" }
